--- a/pkmn_keyboard.css
+++ b/pkmn_keyboard.css
@@ -7,7 +7,7 @@
 #pkmnKeyboard {
 	position: relative;
 	width: 240px; height:160px;
-	background-image: url("http://tustin2121.github.io/TPPNamingKeyboard/KeyboardAtlas.png");
+	background-image: url("https://dl.dropboxusercontent.com/u/3311718/TPPChatKeyboard/KeyboardAtlas.png");
 	/*background-size: 240px 160px;*/
 	background-repeat: no-repeat;
 	overflow: hidden;
@@ -18,7 +18,7 @@
 	width: 168px; height:76px;
 	top: 171px; left:13px;
 	z-index: 8;
-	background-image: url("http://tustin2121.github.io/TPPNamingKeyboard/KeyboardAtlas.png");
+	background-image: url("https://dl.dropboxusercontent.com/u/3311718/TPPChatKeyboard/KeyboardAtlas.png");
 	/*background-size: 168px 76px;*/
 	background-repeat: no-repeat;
 }
@@ -40,7 +40,7 @@
 	width: 8px; height: 5px;
 	top: 162px; left: 3px;
 	background-position: -3px -162px;
-	background-image: url("http://tustin2121.github.io/TPPNamingKeyboard/KeyboardAtlas.png");
+	background-image: url("https://dl.dropboxusercontent.com/u/3311718/TPPChatKeyboard/KeyboardAtlas.png");
 	/*background-size: 168px 76px;*/
 	background-repeat: no-repeat;
 }
@@ -59,7 +59,7 @@
 	width: 38px; height: 25px;
 	top: 70px; left: 187px;
 	background-position: -187px -162px;
-	background-image: url("http://tustin2121.github.io/TPPNamingKeyboard/KeyboardAtlas.png");
+	background-image: url("https://dl.dropboxusercontent.com/u/3311718/TPPChatKeyboard/KeyboardAtlas.png");
 	/*background-size: 168px 76px;*/
 	background-repeat: no-repeat;
 }
@@ -80,7 +80,7 @@
 	z-index: 100;
 	top: 30px; left:30px;
 	width: 12px; height: 16px;
-	background-image: url("http://tustin2121.github.io/TPPNamingKeyboard/KeyboardAtlas.png");
+	background-image: url("https://dl.dropboxusercontent.com/u/3311718/TPPChatKeyboard/KeyboardAtlas.png");
 	/*background-size: 12px 16px;*/
 	animation: CursorBlink 1s steps(3) infinite;
 	-webkit-animation: CursorBlink 1s steps(3) infinite;
